[gd_scene format=3 uid="uid://dpm02hsadsnhh"]

[ext_resource type="Script" uid="uid://ckjjwd1y5at18" path="res://enemy.gd" id="1_n5cm8"]
[ext_resource type="Texture2D" uid="uid://dec818adef8d" path="res://Assets/Enemies/Skeleton/skeleton_idle.png" id="2_8h2tm"]
[ext_resource type="Texture2D" uid="uid://0wikbtis3ci8" path="res://Assets/Enemies/Slime/slime_dead.png" id="3_cfgqn"]
[ext_resource type="Texture2D" uid="uid://tpa6qrwn6hhi" path="res://Assets/Enemies/Slime/slime_hit.png" id="4_1d20f"]
[ext_resource type="Texture2D" uid="uid://df7wd8xysik2y" path="res://Assets/Enemies/Slime/slime_squashed.png" id="5_12h6m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mf88q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8h2tm")
}],
"loop": true,
"name": &"crawl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_cfgqn")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_1d20f")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_12h6m")
}],
"loop": true,
"name": &"squashed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o72j3"]
size = Vector2(31, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbdpi"]
size = Vector2(31, 52)

[node name="Sniper" type="CharacterBody2D" unique_id=1854339126]
collision_layer = 8
collision_mask = 67
script = ExtResource("1_n5cm8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=873667669]
sprite_frames = SubResource("SpriteFrames_mf88q")
animation = &"crawl"
autoplay = "crawl"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2062700937]
position = Vector2(-4, 28)
shape = SubResource("RectangleShape2D_o72j3")

[node name="HurtZone" type="Area2D" parent="." unique_id=1412566572]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtZone" unique_id=1394744345]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_pbdpi")

[node name="TopZone" type="Area2D" parent="." unique_id=502278582]

[connection signal="body_entered" from="HurtZone" to="." method="_on_hurt_zone_body_entered"]
[connection signal="body_entered" from="TopZone" to="." method="_on_top_zone_body_entered"]
